plugins {
    id 'java-library'
}

group 'qupath.edu'
version '1.0-SNAPSHOT'
java.sourceCompatibility = JavaVersion.VERSION_16

repositories {
    mavenCentral()

    maven {
        name = "SciJava releases"
        url = uri("https://maven.scijava.org/content/repositories/releases")
    }

    maven {
        name = "SciJava snapshots"
        url = uri("https://maven.scijava.org/content/repositories/snapshots")
    }
}

dependencies {
    implementation "io.github.qupath:qupath-gui-fx:0.4.2"
    implementation "com.google.guava:guava:30.1.1-jre"
    api "com.microsoft.azure:msal4j:1.11.0"
}

jar {
    duplicatesStrategy = 'warn'
    configurations.api.setCanBeResolved(true)

    from {
        configurations.api.collect { it.isDirectory() ? it : zipTree(it) }
    }
}